--- a/calças.html
+++ b/calças.html
@@ -4,50 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        img{
-            width: 200px;
-            height: 200px;
-        }
-        .cards {
-            justify-content: space-between;
-            display: flex;
-            margin: 1%;
-        }
-        .titulo{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .card {
-            border: 1px solid #e627a6;
-            border-radius: 5%;
-            padding: 1%;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .card:hover {
-            transform: scale(1.1);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        }
-        .back-button {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 24px;
-        color: #fff;
-        background-color: #e627a6;
-        text-decoration: none;
-        border-radius: 5px;
-        transition: background-color 0.3s ease;
-      }
-
-      .back-button:hover {
-        background-color: #b81f82;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <div class="titulo">
